[package]
name = "ross"
version = "0.1.0"

[build-dependencies]
bootloader = "0.11"
ross-kernel = { path = "kernel/", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
